<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_vhoot_app"
                android:textSize="@dimen/_16sdp"
                android:textColor="@android:color/background_dark"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:padding="@dimen/_5sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/app_description"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                android:gravity="center" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_developers"
                android:textSize="@dimen/_16sdp"
                android:textColor="@android:color/background_dark"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:padding="@dimen/_5sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/rezaur_crop"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:contentDescription="@string/image" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/rezaur_description"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/sanzida_crop"
                android:scaleType="fitXY"
                android:layout_gravity="center"
                android:contentDescription="@string/image" />

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:text="@string/sanzida_description"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_rezaur"
                android:padding="@dimen/_5sdp"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>