<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPassword"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark" >
        <View
            android:layout_width="0dp"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_reset_page"
            android:textSize="@dimen/_16sdp"
            android:textColor="@android:color/background_dark"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:padding="@dimen/_5sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp">

            <View
                android:layout_width="0dp"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_email"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/edt_email"
                android:labelFor="@id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/_12sdp"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                android:maxLength="50"
                android:maxLines="1"
                android:layout_marginStart="-5dp"
                android:layout_marginEnd="-5dp"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:text="@string/reset_message"
                android:textColor="@color/colorAccentSecondary"
                android:textSize="@dimen/_12sdp"
                android:gravity="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/reset_password"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/background_dark"
                android:textAllCaps="false"
                android:background="@drawable/btn_rounded_amber"
                android:onClick="resetPassword"/>

            <View
                android:layout_width="0dp"
                android:layout_height="25dp" />

        </LinearLayout>

</LinearLayout>